@@ -1,5 +1,8 @@
 2008-01-11  Miguel Sofer  <msofer@users.sf.net>
 
+	* unix/tclUnixThrd.c (TclpThreadGetStackSize): restore stack
+	checking functionality in freebsd [Bug 1850424]
+
 	* unix/tclUnixThrd.c (TclpThreadGetStackSize): fix for crash in
 	freebsd [Bug 1860425].
 
